test/functional/directory/gds/ts/gdssetup/lib/invalid/sv_domdef5.cleanup
# 
# @OSF_COPYRIGHT@
# COPYRIGHT NOTICE
# Copyright (c) 1990, 1991, 1992, 1993, 1994, 1996 Open Software Foundation, Inc.
# ALL RIGHTS RESERVED (DCE).  See the file named COPYRIGHT.DCE for 
# the full copyright text.
#
# HISTORY
# $Log: sv_domdef5.cleanup,v $
# Revision 1.1.4.2  1996/03/11  01:34:53  marty
# 	Update copyright years
# 	[1996/03/10  19:37:10  marty]
#
# Revision 1.1.4.1  1995/12/11  15:29:20  root
# 	Submit
# 	[1995/12/11  14:37:32  root]
# 
# Revision 1.1.2.2  1994/08/19  13:54:28  marrek
# 	Improve testcode coverage OT11586.
# 	[1994/08/19  11:44:59  marrek]
# 
# Revision 1.1.2.1  1994/07/15  13:29:47  marrek
# 	More gdssetup testcases.
# 	[1994/07/15  08:50:44  marrek]
# 
# $EndLog$
#
# $RCSfile: sv_domdef5.cleanup,v $ $Revision: 1.1.4.2 $ $Date: 1996/03/11 01:34:53 $
#

#Delete local DSA (dsa-m3) in contact DSA (dsa-m1)
#Delete dir-id 3

gdscp -c "x500obj bind -dirid 3 -dsa /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m1; \
	  x500svc modify -preferadmfunctions TRUE -dontusecopy FALSE -localscope TRUE; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m3"

gdssysadm -fd -p
gdssysadm -fc -m2 -d3 -p
gdssysadm -fA -p
